lint update